# Hermes-Cap-Pack

./: .gitignore  .governance-fingerprints.json  CHANGELOG.md  PROJECT-PANORAMA.html  README.md  constraints.md  pyproject.toml
docs/: ADAPTER_GUIDE.md  CAP-PACK-STANDARD.md  EPIC-001-feasibility.md  EPIC-002-tree-health.md  EPIC-003-module-extraction.md  EPIC-004-quality-upgrade.md  EPIC-005-skill-governance-engine.md  EPIC-006-governance-fix-engine.md  EPIC-007-skill-to-cap-pack-converter.md  QUICKSTART.md  SPEC-001-splitting.md  SPEC-002-management.md  SPEC-003-iteration.md  SPEC-004-adaptation.md  SPEC-005-tree-index.md  SPEC-006-quality-health.md  SPEC-007-sra-adaptation.md  SPEC-1-1.md  SPEC-1-2.md  SPEC-1-3.md  SPEC-1-4.md  SPEC-1-5.md  SPEC-2-1.md  SPEC-2-2.md  SPEC-2-3.md  SPEC-2-4.md  SPEC-3-1.md  SPEC-3-2.md  SPEC-3-3.md  SPEC-4-1.md  SPEC-4-2.md  SPEC-4-3.md  SPEC-5-0.md  SPEC-5-1.md  SPEC-5-2.md  SPEC-5-3.md  SPEC-6-1.md  SPEC-6-2.md  SPEC-6-3.md  STORY-TEMPLATE.md  (+5 more)
references/: opencode-delegation-protocol.md
reports/: chi-baseline.json  chi-by-pack.json  chi-dashboard-v2.html  chi-priority-list.md  epic004-quality-upgrade-report.html  health-dashboard.html  lifecycle.html  skill-tree-architecture-research.html
schemas/: cap-pack-format-v1.md  cap-pack-v1.schema.json  cap-pack-v2.schema.json  cap-pack-v3.schema.json
scripts/: aggregate-sqs.py  bump-version.py  chain-gate.py  chain-state.py  chi-gate.py  ci-check-cross-refs.py  ci-check-yaml.py  complete-extraction.py  extract-pack.py  fix-l2-frontmatter.py  fix-low-score-skills.py  fix-pack-metadata.py  (+16 more)
(+332 files in other folders)
